Fix new background video responsiveness on small screens

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -88,24 +88,14 @@ html {
   pointer-events: none;
 } */
 
-.video-background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  z-index: -1;
-}
-
 .video-iframe {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1.2);
   width: 100vw;
   height: 56.25vw; /* 16:9 aspect ratio */
-  min-height: 100vh;
+  min-height: 100dvh;
   min-width: 177.77vh; /* 16:9 aspect ratio */
 }
 
